Make sure now x overflow

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -19,6 +19,7 @@ body {
   margin: 0;
   background-repeat: repeat;
   background-image: url('/images/background/white-3.avif');
+  overflow-x: hidden;
 }
 
 .background-image {
